--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-08 23:31:28
+lastsearch = 2024-08-09 09:53:17
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -27,9 +27,9 @@ title = Đèn mắt ếch chiếu điểm HT 8094 10W
 url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
 
 [www.htlightlevel.vn]
-match = -193.3%%
-title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
-url = https://www.htlightlevel.vn/den-roi-co-5w/
+match = -233.3%%
+title = Đèn Pha LED 5054 - Công Ty Sản Xuất Đèn LED Chiếu Sáng ...
+url = https://www.htlightlevel.vn/den-pha-led-5054-10w/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
@@ -37,9 +37,9 @@ title = HT Chiếu Sáng
 url = https://www.dienotobinhdinh.com/ht-chieu-sang/
 
 [www.facebook.com]
-match = -186.7%%
-title = Cộng đồng cư dân Bát Tràng | Chiếu tăm cây H&T khẳng ...
-url = https://www.facebook.com/groups/664918127312487/posts/chiếu-tăm-cây-ht-khẳng-định-thương-hiệu-trên-thị-trường-freeshiplh-0963-658-905-/1872701319867489/
+match = -180.0%%
+title = Trung tâm thiết bị chiếu sáng - HT Lighting | Da Nang
+url = https://www.facebook.com/trungtamthietbichieusanghtlighting/
 
 [rangdong.com.vn]
 match = 6.7%%
@@ -93,8 +93,8 @@ url = https://m.facebook.com/groups/648618483681727/posts/852387779971462/
 
 [www.diepxuan.com]
 match = -13.3%%
-title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+title = Chiếu cây HT 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [huongtruc.com]
 match = -213.3%%
