--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-08 23:35:49
+lastsearch = 2024-08-09 10:02:14
 
 [hoa18.com]
 match = -126.3%%
@@ -19,7 +19,7 @@ url = https://www.youtube.com/watch?v=demL5DzJK5M
 [kallos.co]
 match = -105.3%%
 title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
-url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
+url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua?srsltid=AfmBOoouIn3z2ZXKnjXirxWdD_OQQh8P6eNtkM48dq2nOSscBBC-I0mV
 
 [www.facebook.com]
 match = -47.4%%
@@ -27,9 +27,9 @@ title = Hoa18 Tuyển Dụng | Ho Chi Minh City
 url = https://www.facebook.com/hoa18tuyendung/
 
 [vietnambiz.vn]
-match = -94.7%%
-title = Xuất khẩu cà phê tiếp tục giảm mạnh trong tháng 7
-url = https://vietnambiz.vn/xuat-khau-ca-phe-tiep-tuc-giam-manh-trong-thang-7-20248517263800.htm
+match = -126.3%%
+title = Giá thịt heo Hà Hiền ổn định trở lại vào đầu phiên 9/8
+url = https://vietnambiz.vn/gia-thit-heo-ha-hien-on-dinh-tro-lai-vao-dau-phien-98-20248973256668.htm
 
 [thoibaotaichinhvietnam.vn]
 match = -121.1%%
@@ -132,9 +132,9 @@ title =
 url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam-nu-tam-xuan-trang-tri-tet-dep-sang-trong-1406607
 
 [shopee.vn]
-match = -121.1%%
-title = Nhang nở hoa - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
-url = https://shopee.vn/list/nhang/nở hoa
+match = -84.2%%
+title = cây phú quý giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=cây phú quý
 
 [baobinhdinh.vn]
 match = -110.5%%
