--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-09 05:33:47
+lastsearch = 2024-08-09 10:00:52
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -82,9 +82,9 @@ title = Khăn rối mặt gấu kèm lục lạc, gặm nướu (Xanh dương)
 url = https://concung.com/do-choi-em-be/khan-roi-mat-gau-kem-luc-lac-gam-nuou-xanh-duong-55669.html
 
 [shopee.vn]
-match = -18.8%%
-title = Chiếu lác thiên nhiên : 1m6 .1m8
-url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
+match = -75.0%%
+title = chiếu lác xuất khẩu 1m8 chiếu dầy cao cấp
+url = https://shopee.vn/chiếu-lác-xuất-khẩu-1m8-chiếu-dầy-cao-cấp-i.275355238.7156323941
 
 [www.conggiao.org]
 match = -68.8%%
@@ -314,12 +314,12 @@ url = https://www.aeon.com.vn/
 [www.lazada.vn]
 match = -143.8%%
 title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/?srsltid=AfmBOorb_xkoRVwR2hLUp64Bvk7B2WVAPuQITRjRnDWFzHU15P_IUKf2
+url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/
 
 [yato.vn]
 match = -175.0%%
 title = Bộ Cờ Lê Đảo Chiều Lắc Léo 12 Chi Tiết 8-19mm Yato YT ...
-url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885?srsltid=AfmBOordSIa18JHSl7yf9NvIebX3SCRbgjIMm4NVrK5ZX0mmXDzSEZhF
+url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885
 
 [baothaibinh.com.vn]
 match = -200.0%%
@@ -342,9 +342,9 @@ title = Suy ngắm 14 Đàng Thánh Giá - Kinh truyền thống
 url = https://www.tonggiaophanhanoi.org/suy-ngam-14-dang-thanh-gia-kinh-truyen-thong/
 
 [www.facebook.com]
-match = -212.5%%
-title = Tại sao V.League không chơi như Thai League, cho phép các ...
-url = https://www.facebook.com/100037593873375/videos/1232801161088673/?__so__=permalink
+match = -118.8%%
+title = BBC News Tiếng Việt added a new photo. ...
+url = https://www.facebook.com/100064688586481/photos/898251185674493/
 
 [laodong.vn]
 match = -206.2%%
@@ -460,4 +460,9 @@ url = https://atgt.baogiaothong.vn/hai-tai-xe-bi-thuong-sau-cu-tong-manh-giua-ha
 match = -137.5%%
 title = Bài thơ: Tây Tiến (Quang Dũng - Bùi Đình Diệm)
 url = https://www.thivien.net/Quang-Dũng/Tây-Tiến/poem-xTFdqZUSfE3riX2yNfcavA
+
+[vpcp.chinhphu.vn]
+match = -218.8%%
+title = Thủ tướng chủ trì phiên họp Ban Chỉ đạo Nhà nước các công ...
+url = https://vpcp.chinhphu.vn/thu-tuong-chu-tri-phien-hop-ban-chi-dao-nha-nuoc-cac-cong-trinh-du-an-quan-trong-quoc-gia-trong-diem-nganh-gtvt-102240809090318683.htm
 
