--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-09 08:00:45
+lastsearch = 2024-08-09 09:46:59
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và ...
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -200.0%%
-title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
-url = https://www.youtube.com/watch?v=7yEnuxJqQKg
+match = -321.4%%
+title = Rod Stewart - The Killing Of Georgie (Part I & II) (Official Video)
+url = https://www.youtube.com/watch?v=95zxtaKQBBc
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -50.0%%
-title = Explore my Options | USCIS
-url = https://www.uscis.gov/forms/explore-my-options
+match = -114.3%%
+title = About the EB-5 Visa Classification
+url = https://www.uscis.gov/working-in-the-united-states/permanent-workers/employment-based-immigration-fifth-preference-eb-5/about-the-eb-5-visa-classification
 
 [www.evergreenrecreation.com]
 match = -157.1%%
@@ -117,9 +117,9 @@ title =
 url = https://www.google.com/search?sca_esv=66046235350063f2&sca_upv=1&q=Who+wrote+the+Killing+of+Georgie+lyrics?&sa=X&ved=2ahUKEwi3kc6nucqGAxXykIkEHQ4QIj4QsZYEegQIMhAC
 
 [www.tiktok.com]
-match = 21.4%%
-title = chấp 10 man xanh
-url = https://www.tiktok.com/@lhn510/photo/7363834268344175873
+match = -164.3%%
+title = 10FT SHARK PULLS MAN 4 MILES AWAY FROM SHORE!
+url = https://www.tiktok.com/@zak_catchem/video/7320112463750499627?lang=en
 
 [www.ashrae.org]
 match = 0.0%%
