--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-09 09:24:00
+lastsearch = 2024-08-09 10:44:04
 
 [chanrathanhthuy.com]
 match = -9.7%%
@@ -14,7 +14,7 @@ url = https://chanrathanhthuy.com/tin-tuc/nen-chon-mau-sac-chan-ga-goi-dem-theo-
 [demxanh.com]
 match = 38.7%%
 title = Bộ chăn ga gối Singapore King Luxury KL2418
-url = https://demxanh.com/bo-chan-ga-goi-singapore-king-luxury-kl2418.html?srsltid=AfmBOoqoqzvcWb_wDLfZINgm2IuIM7cl9_1wTnIB5fy60H7dVZaZ5VSG
+url = https://demxanh.com/bo-chan-ga-goi-singapore-king-luxury-kl2418.html
 
 [songhongonline.vn]
 match = 53.8%%
@@ -29,7 +29,7 @@ url = https://changagoidemsonghong.com/chan-ga-goi-home-s17-05
 [foreverbedding.net]
 match = -3.2%%
 title = Màu Sắc Chăn Ga Gối Đệm Phong Thủy Cho Người Mệnh Hỏa
-url = https://foreverbedding.net/mau-sac-chan-ga-goi-dem-phong-thuy-cho-nguoi-menh-hoa?srsltid=AfmBOoq4ZUO9uwrF1gU34047lcaOb0ZnEdyYdzZbTWjHc3Bdeo7xNrHr
+url = https://foreverbedding.net/mau-sac-chan-ga-goi-dem-phong-thuy-cho-nguoi-menh-hoa
 
 [shopee.vn]
 match = -12.9%%
@@ -54,7 +54,7 @@ url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 [everonvn.com.vn]
 match = -19.4%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoqCWFpcBQ7GQHucIUtT4YhKjIY_Ptx-42He_Gkzejbfb5aCJG4f
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [lizd.vn]
 match = 0.0%%
