--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-08-09 05:46:18
+lastsearch = 2024-08-09 10:44:45
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,9 +12,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = -21.7%%
-title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html?srsltid=AfmBOoq7WZUk9WqceTRm5_rf2nLhp8jqZu8nIBSrWpuY-2-1LKIWId0y
+match = 30.4%%
+title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
+url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
 
 [chieutrucsaigon.com]
 match = -13.0%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOorjol6Dc_KcUWLvHWCHgqb6fJ5ObgLsPFsRIydRDlyBHvOoOQOl
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
