--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-09 08:12:54
+lastsearch = 2024-08-09 10:55:26
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -66.7%%
-title = Baïeta - Cocktails & Chic tapas
-url = https://www.facebook.com/baietasaigon.restaurant/
+match = -240.0%%
+title = HOT&COLD D2 Toạ lạc tại:... - Hot Cold - Trà sữa & Xiên Que
+url = https://www.facebook.com/trasuaxienque/posts/hotcold-d2toạ-lạc-tại-32-đường-d2-phường-25-q-bình-thạnh-tp-hồ-chí-minhhotline-g/1200627010039097/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -112,8 +112,8 @@ title = Chuông lắc cầm tay hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chuông lắc cầm tay
 
 [vishipel.com.vn]
-match = -260.0%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
+match = -226.7%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
