--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-09 06:32:22
+lastsearch = 2024-08-09 10:56:27
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -730,4 +730,9 @@ url = https://kontumcity.kontum.gov.vn/bmw77519318/
 match = -231.2%%
 title = Audi Q3 Advance có giá từ 1,89 tỉ tại Việt Nam, thêm phiên ...
 url = https://baolangson.vn/audi-q3-advance-co-gia-tu-1-89-ti-tai-viet-nam-them-phien-ban-den-ca-tinh-5017698.html
+
+[afamily.vn]
+match = -193.8%%
+title = NÓNG: Cảnh báo sóng thần cao 1m tấn công bờ biển sau ...
+url = https://afamily.vn/nong-canh-bao-song-than-cao-1m-tan-cong-bo-bien-sau-tran-dong-dat-manh-71-do-richter-tai-nhat-ban-20240808223830212.chn
 
