--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-09 09:20:07
+lastsearch = 2024-08-09 11:01:01
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -143.8%%
-title = Hà Nội: dự án 'đắp chiếu' 16 năm làm khổ người dân
-url = https://baomoi.com/ha-noi-du-an-dap-chieu-16-nam-lam-kho-nguoi-dan-c49854035.epi
+match = -168.8%%
+title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
+url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -57,9 +57,9 @@ title = Scholarly articles for chieu lac soc 16
 url = https://scholar.google.com/scholar?q=chieu+lac+soc+16&hl=en&as_sdt=0&as_vis=1&oi=scholart
 
 [moveek.com]
-match = -162.5%%
-title = Rạp CGV Aeon Bình Tân - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/cgv-aeon-mall-binh-tan/
+match = -175.0%%
+title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cinestar-kien-giang/
 
 [baolongan.vn]
 match = -125.0%%
