--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-09 06:47:25
+lastsearch = 2024-08-09 10:54:00
 
 [www.galottery.com]
 match = -7.7%%
@@ -174,7 +174,7 @@ url = https://www.rn.ca.gov/applicants/lic-end.shtml
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001
+url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOooRiuYN9z_ViV4j574Mw-bxwWySaHIfkahOsnAjDS01gCEXX_Dc
 
 [www.imdb.com]
 match = 0.0%%
