--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-09 09:20:28
+lastsearch = 2024-08-09 10:46:52
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,9 +32,9 @@ title = Svara
 url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
 match = -338.5%%
@@ -234,7 +234,7 @@ url = https://www.ipassio.com/blog/list-of-ragas-in-indian-classical-music
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001
+url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOoqxCIHktZQqRenHQ6uH7RQT8CkmGm4O--pBSKlnquEzVeitvwbH
 
 [pubs.acs.org]
 match = -330.8%%
@@ -477,9 +477,9 @@ title = Georgia Rest Areas: Roadside GA Rest Stops | Maps | Facility
 url = https://www.georgiarestareas.com/
 
 [www.sciencedirect.com]
-match = -284.6%%
-title = Effect of Ni doping on mechanical properties and phase ...
-url = https://www.sciencedirect.com/science/article/abs/pii/S1005030224001634
+match = -300.0%%
+title = Highly mobile twin boundaries in seven-layer modulated Ni ...
+url = https://www.sciencedirect.com/science/article/pii/S1359646219306359
 
 [www.cvlga.org]
 match = -138.5%%
@@ -699,7 +699,7 @@ url = https://www.parker.com/content/dam/Parker-com/Literature/Sporlan/Sporlan-p
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/
+url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOopFBg9nz2Yb6Zej2ZAsg1fmz0jGyLZ3EjBUh3_6oBgT_SPX_a-w
 
 [www.historycolorado.org]
 match = -115.4%%
