--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-09 06:32:01
+lastsearch = 2024-08-09 10:48:59
 
 [shopee.vn]
-match = -214.3%%
-title = mùng chụp tự bung cao cấp 18 x 18 m giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=mùng chụp tự bung cao cấp 18 x 18 m
+match = -171.4%%
+title = [BẢO HÀNH 18 THÁNG] Màn Chụp Tự Bung Đỉnh Rộng ...
+url = https://shopee.vn/-BẢO-HÀNH-18-THÁNG-Màn-Chụp-Tự-Bung-Đỉnh-Rộng-Cao-Cấp-Màn-Đỉnh-Vuông-Hàng-Đẹp-Dày-Dặn-2m2_1m8_1m6-i.176591078.7737140981
 
 [mungthienmetta.com]
 match = -171.4%%
@@ -42,9 +42,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [www.bible.com]
-match = -142.9%%
-title = THUPUAN 18 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/REV.18.MIZOVBSI
+match = -171.4%%
+title = TIRHKOHTE 18 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/ACT.18.MIZCLBSI
 
 [mungchup.com]
 match = -164.3%%
@@ -97,14 +97,14 @@ title = Recipe: sautéed kong xing tsai
 url = https://userealbutter.com/2007/10/23/sauteed-kong-xing-tsai-recipe/
 
 [sieuthidienmaypico.com]
-match = -107.1%%
-title = Màn chụp tự bung Kiều Phi - Mùng, màn ngủ
-url = https://sieuthidienmaypico.com/ma-n-chu-p-tu-bung-kie-u-phi-mu-nsh8587689038.html
+match = -192.9%%
+title = Màn chụp tự bung người lớn đỉnh vuông - Mùng, màn ngủ
+url = https://sieuthidienmaypico.com/ma-n-chu-p-tu-bung-nguo-i-lo-n-nsh11624020354.html
 
 [www.facebook.com]
-match = -178.6%%
-title = Màn Chụp Tự Bung Hà Nội hotline 0963.325.228 | Hanoi
-url = https://www.facebook.com/ManTuBungDinhVuong/
+match = -100.0%%
+title = Holy Bible (Mizo) | Johana 3:15-18
+url = https://www.facebook.com/groups/MizoHolyBible/posts/johana-315-18tupawh-a-ring-apiangin-amah-avanga-chatuana-nunna-an-neihna-turin-p/4674411329291742/
 
 [www.churchofjesuschrist.org]
 match = -28.6%%
