--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-08-09 09:22:56
+lastsearch = 2024-08-09 10:59:57
 
 [www.tiktok.com]
 match = -5.3%%
@@ -12,14 +12,14 @@ title = Ea Email Method Cut
 url = https://www.tiktok.com/discover/ea-email-method-cut
 
 [www.reddit.com]
-match = -91.7%%
-title = 22re/22r - Mechanic told me it was junk : r/ToyotaPickup
-url = https://www.reddit.com/r/ToyotaPickup/comments/12aw6b1/22re22r_mechanic_told_me_it_was_junk/
+match = -79.2%%
+title = Why is the 22re such a good engine? : r/ToyotaPickup
+url = https://www.reddit.com/r/ToyotaPickup/comments/1au9dnh/why_is_the_22re_such_a_good_engine/
 
 [www.pirate4x4.com]
-match = -25.0%%
-title = Life beyond 200k miles on 22RE | Page 2
-url = https://www.pirate4x4.com/threads/life-beyond-200k-miles-on-22re.220404/page-2
+match = -20.8%%
+title = 22RE Running Rich - trying to diagnose
+url = https://www.pirate4x4.com/threads/22re-running-rich-trying-to-diagnose.2687366/
 
 [www.msextra.com]
 match = -70.8%%
