--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -277,9 +277,9 @@ title = Service Directory (by State) - Optometry
 url = https://www.va.gov/optometry/service_directory_by_state.asp
 
 [www.usmcu.edu]
-match = -118.2%%
-title = U.S. Marines in Vietnam Fighting the North Vietnamese ...
-url = https://www.usmcu.edu/Portals/218/U_S_ Marines in Vietnam Fighting the North Vietnamese 1967  PCN 19000309000.pdf
+match = 0.0%%
+title = VN Oral History Catalog.pdf
+url = https://www.usmcu.edu/Portals/218/VN Oral History Catalog.pdf
 
 [huggingface.co]
 match = -133.3%%
