--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-09 09:08:30
+lastsearch = 2024-08-09 10:54:22
 
 [erado.vn]
 match = 0.0%%
@@ -257,9 +257,9 @@ title = Bộ Thảm Bếp, Thảm Để Chân Giường, Thảm Lau Chân ...
 url = https://spacet.vn/shop/bo-tham-bep-tham-de-chan-giuong-tham-lau-chan-long-cuu-cao-cap-nhap-khau-50x120-12378
 
 [tonybed.com]
-match = 10.5%%
-title = Drap ga trải giường
-url = https://tonybed.com/drap-ga-trai-giuong/
+match = -5.0%%
+title = Bộ Drap Ga Trải Giường Modal - 07
+url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-07/
 
 [www.youtube.com]
 match = -105.0%%
