--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-08-09 09:09:35
+lastsearch = 2024-08-09 10:51:51
 
 [shopee.vn]
-match = -57.1%%
-title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
-url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
+match = -52.4%%
+title = thảm trải giường giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -23,8 +23,8 @@ url = https://www.sendo.vn/tham-chan-giuong.htm
 
 [tiki.vn]
 match = -38.1%%
-title = Tham trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=tham trải giường
+title = Thảm trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải giường
 
 [flexhouse.vn]
 match = -42.9%%
@@ -52,9 +52,9 @@ title = Thảm Trải Giường Cao Cấp Loại 1.6m
 url = https://www.lazada.vn/products/tham-trai-giuong-cao-cap-loai-16m-i245665123.html?srsltid=AfmBOoqNPu3XvKBDhQ_lHOeDmJUm-JlLxNObWieNcTrWXJe3-hGcrxIC
 
 [www.facebook.com]
-match = -85.7%%
-title = NÉT RIÊNG CUỐN HÚT TỪ GIƯỜNG MAXINE Nằm trong bộ ...
-url = https://www.facebook.com/nhaxinhvn/videos/nét-riêng-cuốn-hút-từ-giường-maxinenằm-trong-bộ-sưu-tập-cùng-tên-chiếc-giường-gỗ/728754454752154/
+match = 33.3%%
+title = Thảm Trải Giường | Hanoi
+url = https://www.facebook.com/ShopThamTraiGiuong/
 
 [sagatexvietnam.com.vn]
 match = -81.0%%
